--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@ h5 {
     font-size: 16px;
 }
 
+h6 {
+    font-size: 18px;
+    display: inline;
+}
+
 a {
     color: #6195FF;
     text-decoration: none;
