--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
     color: #868F9B;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, h7 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     margin-top: 0px;
@@ -86,6 +86,11 @@ h5 {
 
 h6 {
     font-size: 18px;
+    display: inline;
+}
+
+h7 {
+    font-size: 14px;
     display: inline;
 }
 
@@ -160,8 +165,18 @@ ul, ol {
     border-bottom: 1px solid #EEE;
 }
 
+.bg-purple {
+    background-color: c
+    border-top: 1px solid #EEE;
+    border-bottom: 1px solid #EEE;
+}
+
 .bg-dark {
     background-color: #1C1D21;
+}
+
+.bg-light {
+    background-color: #FFFFFF;
 }
 
 
@@ -189,6 +204,7 @@ ul, ol {
     background: #1C1D21;
 }
 
+.circular--portrait { position: relative; left: 15%; width: 150px; height: 150px; overflow: hidden; border-radius: 50%; } .circular--portrait img { width: 100%; height: auto; }
 
 /* --  section header  -- */
 
@@ -647,6 +663,7 @@ header {
     padding: 40px 20px;
     border: 1px solid #EEE;
     margin: 15px 0px;
+    background-color: White;      
 }
 
 .about i {
@@ -657,7 +674,7 @@ header {
 
 .about:after {
     content: "";
-    background-color: #1C1D21;
+c
     position: absolute;
     left: 0;
     top: 0;
@@ -668,8 +685,13 @@ header {
     transition: 0.2s width;
 }
 
+.about:hover {
+    width: 100%;    
+    background-color: #1C1D21;    
+}
+
 .about:hover:after {
-    width: 100%;
+    width: 100%;    
 }
 
 .about h3 {
@@ -678,6 +700,14 @@ header {
 }
 
 .about:hover h3 {
+    color: #fff;
+}
+
+.about:hover h4 {
+    color: #fff;
+}
+
+.about:hover h7 {
     color: #fff;
 }
 
